@@ -839,17 +839,17 @@ void write_map_parameters_to_string(RMParms *RP, char *buf, int bufsize) {
 void write_parameters_to_string(char *buf,
                                 int xsize_n,
                                 int ysize_n,
-                                char *wallstyle_n,
-                                char *floorstyle_n,
-                                char *monsterstyle_n,
-                                char *treasurestyle_n,
-                                char *layoutstyle_n,
-                                char *decorstyle_n,
-                                char *doorstyle_n,
-                                char *exitstyle_n,
-                                char *final_map_n,
-                                char *exit_on_final_map_n,
-                                char *this_map_n,
+                                const char *wallstyle_n,
+                                const char *floorstyle_n,
+                                const char *monsterstyle_n,
+                                const char *treasurestyle_n,
+                                const char *layoutstyle_n,
+                                const char *decorstyle_n,
+                                const char *doorstyle_n,
+                                const char *exitstyle_n,
+                                const char *final_map_n,
+                                const char *exit_on_final_map_n,
+                                const char *this_map_n,
                                 int layoutoptions1_n,
                                 int layoutoptions2_n,
                                 int layoutoptions3_n,
